# paytrail

./: .gitignore  .sqlfluff  Makefile  README.md  databricks.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
bi/: paytrail_mart.lvdash.json
dbt/: dbt_project.yml  profiles.yml
dbt/macros/: generate_schema_name.sql
dbt/models/gold/: _gold__models.yml  dim_account.sql  dim_customer.sql  dim_date.sql  dim_transaction_type.sql  fact_transaction.sql  mart_daily_settled_volume.sql
dbt/models/silver/: _silver__models.yml  _silver__sources.yml  _silver__unit_tests.yml  audit_silver_reconciliation.sql  stg_transactions.sql  transactions.sql  transactions_quarantine.sql
dbt/tests/: assert_silver_reconciliation.sql
docs/: AZURE.md  CONCEPTS.md  DATA.md  GOVERNANCE.md
docs/dashboards/: README.md
docs/diagrams/: architecture.excalidraw
docs/lineage/: lineage.json  lineage.md
resources/: paytrail_job.yml
resources/sql/: pipeline_gate.sql
setup/: create_dashboard.py  export_lineage.py  land_source.py  pii_group.py  run_sql.py  uc_setup.sql
src/paytrail/: __init__.py  warehouse.py
src/paytrail/azure/: __init__.py  adls.py
src/paytrail/benchmark/: __init__.py  run_benchmark.py
src/paytrail/ingest/: __init__.py  bronze.py
